[tool.poetry]
name = "cipher-ih2400-v1"
version = "0.1.0"
description = "This package is for HW7 of my MDS course."
authors = ["Isabella Hee <icando2situps@gmail.com>"]
readme = "README.md"
packages = [{include = "cipher_ih2400_v1"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
Sphinx = "^5.3.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
