[tool.poetry]
name = "cipher-new-ih2400"
version = "0.1.0"
description = ""
authors = ["Isabella Hee <icando2situps@gmail.com>"]
readme = "README.md"
packages = [{include = "cipher_new_ih2400"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
Sphinx = "^5.3.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
